fix position close button + overflow body

--- a/src/style/dialog.css
+++ b/src/style/dialog.css
@@ -44,6 +44,9 @@
     border-top: #e3e7e8 solid 1px;
     background-color: #F7F9FA;
     padding: 15px 20px;
+    overflow-y: auto;
+    max-height: 70vh;
+    max-width: 600px;
 }
 
 .kuc-dialog-footer {
